# python-zeep-ebay

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml
src/zeep/: ebay_transport.py
src/zeep/ebay/: __init__.py  client.py  transport.py  transports.py
tests/: test_client.py
